<resources>
    <string name="app_name">NavDrawBase</string>
    <string name="action_settings">Settings</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Accessibility description for navigation mDrawerLayout -->
    <string name="navdrawer_description_a11y">Navigation Drawer used to switch between major features of the application</string>
    <string name="title_activity_deleteme">deleteme</string>
    <string name="title_activity_2">Activity2</string>
    <string name="title_activity_intro">SignOn</string>
    <string name="loading">Loading...</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="app_name_with_index">PdfRendererBasic (%1$d/%2$d)</string>
    <string name="info">Info</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <string name="loginButton">Log in</string>
    <string name="registerButton">Register</string>
    <string name="logoTextView">SignOn</string>
    <string name="emailEditText">Email</string>
    <string name="passwordEditText">Password</string>
    <string name="changeEmailButtonText">Change Email</string>
    <string name="changePasswordButtonText">Change Password</string>
    <string name="changeNameButtonText">Change Name</string>
    <string name="changeSignatureButtonText">Change Signature</string>
    <string name="username">USERNAME</string>
    <string name="name">Name:</string>
    <string name="birthday">Date of Birth:</string>
    <string name="joinedOn">Joined on:</string>
    <string name="documentSigned">Document Signed:</string>
    <string name="title_activity_document">DocumentActivity</string>
    <string name="external_dir">signon</string>
    <string name="captureSignatureNameText">Enter Signature Name:</string>

    <string name="context_delete_title">Select signatures to delete</string>
    <string name="context_delete_item_text">Delete</string>
    <string name="context_update_item_text">Update</string>
    <string name="add">Add</string>
    <string name="sync">Sync</string>
    <string name="sync_long">Sync with backend</string>
    <string name="add_long">Add a signature</string>
    <string name="alertDialogButton">OK</string>
    <string name="signatureListContentDescriber">signature image</string>
    <string name="settingOflPasswordTextView">Old Password :</string>
    <string name="introActivityLoginButton">logIn</string>
    <string name="introActivityRegisterButton">register</string>
    <string name="introActivityLogoTextView">SignOn</string>
    <string name="introActivityImageView">backgroundimage</string>
    <string name="introEmailEditText">Email</string>
    <string name="introPasswordEditText">Password</string>
    <string name="homeActivityTitleTextView">Home</string>
    <string name="homeUploadButton">Upload Document</string>
    <string name="homeCreateSignatureButton">Create signature</string>
    <string name="homeActivityPendingImageView">pending document</string>
    <string name="pendingTextViewHome">Pending Documents:</string>
    <string name="nameTextView">Name :</string>
    <string name="settingPasswordTextView">Password :</string>
    <string name="birthTextView">Birthday :</string>
    <string name="settingEditSignature">Edit Signature</string>
    <string name="saveChangesButton">Save Changes</string>
    <string name="setBirthdate">set Date</string>
    <string name="forgot_password">Forgot Password</string>

</resources>
