<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.signononlinesignatureapp.signon.IntroActivity"
    android:background="#7622cc">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/introActivityLoginButton"
        android:background="#50178c"
        android:textColor="#ffffff"
        android:height="70dp"
        android:textSize="25sp"
        android:layout_above="@+id/introActivityRegisterButton"
        android:text="@string/introActivityLoginButton" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/introActivityRegisterButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#50178c"
        android:textColor="#ffffff"
        android:height="70dp"
        android:textSize="25sp"
        android:text="@string/introActivityRegisterButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/introActivityLogoTextView"
        android:textColor="#ffffff"
        android:textSize="50sp"
        android:layout_marginTop="83dp"
        android:typeface="serif"
        android:text="@string/introActivityLogoTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:id="@+id/introActivityImageView"
        android:background="#50178c"
        android:layout_alignTop="@+id/introEmailEditText"
        android:layout_alignLeft="@+id/introEmailEditText"
        android:layout_alignStart="@+id/introEmailEditText"
        android:layout_alignRight="@+id/introEmailEditText"
        android:layout_alignEnd="@+id/introEmailEditText"
        android:contentDescription="@string/introActivityImageView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/introEmailEditText"
        android:textAlignment="center"
        android:textColorHint="#b7a9cc"
        android:backgroundTint="#b7a9cc"
        android:textColor="#ffffff"
        android:hint="@string/introEmailEditText"
        android:layout_below="@+id/introActivityLogoTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:background="#50178c"
        android:ems="10"
        android:id="@+id/introPasswordEditText"
        android:textAlignment="center"
        android:textColorHint="#b7a9cc"
        android:layout_alignBottom="@+id/introActivityImageView"
        android:layout_alignLeft="@+id/introActivityImageView"
        android:layout_alignStart="@+id/introActivityImageView"
        android:layout_below="@+id/introEmailEditText"
        android:textColor="#ffffff"
        android:hint="@string/introPasswordEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:id="@+id/forgotPassword"
        android:layout_marginTop="14dp"
        android:clickable="true"
        android:textSize="15dp"
        android:longClickable="false"
        android:layout_below="@+id/introActivityImageView"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:onClick="ForgotPasswordOnClick" />

</RelativeLayout>
